<resources>
    <string name="app_name">Flibuster</string>
    <string name="Download">Download</string>
    <string name="title">Title</string>
    <string name="first_name">First Name</string>
    <string name="search">Search</string>
    <string name="booklist">BookList</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="autor">Autor</string>
    <string name="series">Series:</string>
    <string name="genres">Genres</string>

</resources>